# prog2lab

f01/: auto  bar.h  f1.txt  main2  warnings  warnings.cpp
f1/: auto.cpp  foo.cpp  gy.cpp  main.cpp  main2.cpp  main3.cpp
lab01/nagyobb/: Makefile  fuggvenyeim.cpp  fuggvenyeim.h  nagyobb  nagyobb_main.cpp  neptun.c
lab02/string1/: Makefile  string1  string1.c
lab02/string2_cpp/: Makefile  string2.cpp  string2.h  string2_cpp
lab03/Komplex/: komplex.cpp  komplex_teszt
lab03/Teglalap/: teglalap  teglalap.cpp
lab04/: resistor.cpp  resistor_test2  resistor_test2.cpp
lab05/: string5.cpp  string5.h  string5_test
lab06/bicikli/: bicikli.h  bicikli_teszt
lab07/Alakzat_empty/: alakzat2_main.cpp  alakzat_main.cpp  ellipszis.h  rajztabla.cpp
lab07/Alakzatlab/: Makefile  alakzat2_main  alakzat2_main.cpp  alakzat_main  ellipszis.h  haromszog.cpp  haromszog.h  rajztabla.cpp  rajztabla.h
lab08/generikus1/: alaptipus.hpp  generikus1_teszt  generikus1_teszt.cpp  generikus_teszt
lab08/halmaz/: halmaz_teszt  halmaz_teszt.cpp  myset.hpp  runnable
lab09/genArray3/: gen_array_iter3.hpp  gen_array_iter3_test  gen_array_iter3_test.cpp  sablonok.hpp
lab09/generikus2/: generikus2_teszt  sablonok.hpp
lab10/: vektor.hpp  vektor_test.cpp
lab11/diamond/: elkeszult.h  irodistak.h  pirodistak.h
lab13/bugs/: bugs.cbp  bugs.cpp
labextra/: sinx.gnu  xsessionrc
labextra/string2/: Doxyfile  Makefile  (+6 more)
labwt/: .lab_Wt_meg.patch  CMakeLists.txt  Doxyfile  ladaapp  ladaapp.cpp  ladaapp.xml  ladak.cpp  ladak.h  ladawidget.cpp  ladawidget.h  tortadiagram.cpp  tortadiagram.h
(+7 files in other folders)
